# wxWidgets

./: README.md
(Personal) Resources/: ImportantLinks.txt  TDL.txt
3)Syntaxical/1)FirstProgram/: CMakeLists.txt
3)Syntaxical/2)Components/: CMakeLists.txt
3)Syntaxical/2)Components/include/: App.h  Frame.h
3)Syntaxical/2)Components/src/: App.cpp  Frame.cpp
Compiling/FirstProgram/: CMakeLists.txt
FirstCompile/: Notes.docx
LearningCode/FirstProgram/include/: base.h
LearningSyntax/FileSeperation/: CMakeLists.txt
Resources/: ImportantLinks.txt  TDL.txt
Syntaxical/Buttons/: CMakeLists.txt
Syntaxical/Buttons/include/: Buttons.h
Syntaxical/Buttons/src/: Buttons.cpp
Syntaxical/FirstProgram/: Notes.docx
Syntaxical/FirstProgram/src/: base.cpp
wxWidgets/: CMakeLists.txt
wxWidgets/Controls-and-Containers/: CMakeLists.txt
wxWidgets/Controls-and-Containers/include/: Frame.h
wxWidgets/Controls-and-Containers/src/: App.cpp  Frame.cpp
wxWidgets/EmptyProgram/: CMakeLists.txt
wxWidgets/EmptyProgram/include/: App.h  Frame.h
wxWidgets/EmptyProgram/src/: App.cpp  Frame.cpp
wxWidgets/EventHandling/: CMakeLists.txt
wxWidgets/EventHandling/include/: Frame.h
wxWidgets/EventHandling/src/: App.cpp  Frame.cpp
wxWidgets/FirstCompile/: CMakeLists.txt
wxWidgets/Menubar/: CMakeLists.txt
wxWidgets/Menubar/include/: Frame.h
wxWidgets/Menubar/src/: Frame.cpp
wxWidgets/MyoroEditor/: CMakeLists.txt
wxWidgets/MyoroEditor/include/: Frame.h
wxWidgets/MyoroEditor/src/: App.cpp  Frame.cpp
wxWidgets/Pictures/include/: Frame.h
wxWidgets/Pictures/src/: App.cpp  Frame.cpp
wxWidgets/Sizers/: CMakeLists.txt
wxWidgets/Sizers/include/: Frame.h
wxWidgets/Sizers/src/: Frame.cpp
wxWidgets/TextEditor/: CMakeLists.txt
wxWidgets/TextEditor/include/: App.h  Frame.h  Main.h  typingPanel.h  wxCustomTextCtrl.h
wxWidgets/TextEditor/src/: App.cpp  Frame.cpp  Main.cpp
